# Detoxification

./: .gitignore  README.md  yaicon_rag.ipynb
Metrics /: .env_example  1_evaluate_with_category.py  251120_toxic.py  251120_toxic_db.py  251120_toxic_implic.py  2_evaluate_implicit_bias.py  3_analyze.py  4_tern_ter.py  5_stor.py  6_total.py  7_vis.py  7_vis_v2.py  README.md  base.json  detox_stats.json  final_report.json  implicit_bias_detox.json  input_base.json  input_detox.json  run.sh  ter_comparison_result.json  visualization_report.html
Metrics /encoder_metrics/: README.md  kcbert_finetuning.py  kcbert_kmhas.py  kcbert_test.py
Metrics /output/: base.json  detox.json  detox_stats.json  final_report.json  implicit_bias_base.json  implicit_bias_detox.json  input_base.json  input_detox.json  result_summary.json  stor_result.json  ter_comparison_result.json  visualization_report.html
experiment/: .env  model.txt  models_list.txt  readme  run.sh
experiment/data/personas/: A.json  B.json  C.json  D.json  E.json  F.json  G.json  H.json
experiment/run/: converse.py  main.py  rag.py  run_model.py  utils.py
junhyeok_test/: environment.yml
train/: clean_sft_dataset.py  crawl_dcinside.py  pyproject.toml  sft_dataset_builder.py
train/scripts/: job-scritps.sh  train_slurm.sh  train_slurm_converse-new.sh  train_slurm_converse.sh
train/src/dcinside_crawler/: __init__.py  config.py  crawler.py  http.py  models.py  parsers.py  requirements.txt  utils.py
train/src/train/: chat_prompt.py  dpo_train.py  sft_train.py  train_config.py
(+40 files in other folders)
